--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,10 @@ body {
   background: var(--background);
   background-image: 
     linear-gradient(var(--grid-color) 6px, transparent 0px),
+    linear-gradient(90deg, var(--grid-color) 6px, transparent 0px),
+    linear-gradient(var(--grid-color) 6px, transparent 0px),
+    linear-gradient(90deg, var(--grid-color) 6px, transparent 0px),
+    linear-gradient(var(--grid-color) 6px, transparent 0px),
     linear-gradient(90deg, var(--grid-color) 6px, transparent 0px);
   background-size: var(--grid-size) var(--grid-size);
   color: var(--foreground);
